## achievement_item.gd
## æˆå°±é¡¹ UI ç»„ä»¶
extends Control

## æˆå°±æ•°æ®
var achievement_data: DataManager.AchievementDefinition = null

## æˆå°±è¿›åº¦æ•°æ®
var progress_data: DataManager.AchievementProgress = null

@onready var icon_label: Label = $HBox/IconLabel
@onready var name_label: Label = $HBox/VBox/NameLabel
@onready var description_label: Label = $HBox/VBox/DescriptionLabel
@onready var progress_bar: ProgressBar = $HBox/VBox/ProgressBar
@onready var reward_label: Label = $HBox/VBox/RewardLabel
@onready var claim_button: Button = $HBox/ClaimButton
@onready var tier_icon: Label = $HBox/TierIcon

## æˆå°±ç­‰çº§å¯¹åº”çš„é¢œè‰²å’Œå›¾æ ‡
var tier_config := {
	"bronze": {"color": Color(0.72, 0.45, 0.2), "icon": "ğŸ¥‰"},
	"silver": {"color": Color(0.75, 0.75, 0.75), "icon": "ğŸ¥ˆ"},
	"gold": {"color": Color(1.0, 0.84, 0.0), "icon": "ğŸ¥‡"},
	"platinum": {"color": Color(0.82, 0.89, 0.93), "icon": "ğŸ’"},
	"legendary": {"color": Color(1.0, 0.5, 0.0), "icon": "ğŸ†"}
}

func _ready() -> void:
	if claim_button:
		claim_button.pressed.connect(_on_claim_pressed)


## è®¾ç½®æˆå°±æ•°æ®
func set_achievement_data(achievement: DataManager.AchievementDefinition, progress: DataManager.AchievementProgress) -> void:
	achievement_data = achievement
	progress_data = progress
	_update_display()


## æ›´æ–°æ˜¾ç¤º
func _update_display() -> void:
	if not achievement_data:
		return

	# è®¾ç½®åç§°
	if name_label:
		name_label.text = achievement_data.name

	# è®¾ç½®æè¿°
	if description_label:
		description_label.text = achievement_data.description

	# è®¾ç½®è¿›åº¦æ¡
	if progress_bar and achievement_data:
		var current_value := progress_data.current_value if progress_data else 0
		var target_value := achievement_data.target_value
		progress_bar.max_value = target_value
		progress_bar.value = current_value

	# è®¾ç½®å¥–åŠ±æ–‡æœ¬
	if reward_label and achievement_data.rewards:
		var rewards_text := ""
		if achievement_data.rewards.has("gold"):
			rewards_text += "ğŸª™ %d " % achievement_data.rewards["gold"]
		if achievement_data.rewards.has("exp"):
			rewards_text += "â­ %d " % achievement_data.rewards["exp"]
		if achievement_data.rewards.has("diamonds"):
			rewards_text += "ğŸ’ %d " % achievement_data.rewards["diamonds"]
		reward_label.text = rewards_text.strip_edges()

	# è®¾ç½®ç­‰çº§å›¾æ ‡å’Œé¢œè‰²
	if tier_icon and tier_config.has(achievement_data.tier):
		var config = tier_config[achievement_data.tier]
		tier_icon.text = config["icon"]
		tier_icon.modulate = config["color"]

	# è®¾ç½®é¢†å–æŒ‰é’®çŠ¶æ€
	_update_claim_button()


## æ›´æ–°é¢†å–æŒ‰é’®çŠ¶æ€
func _update_claim_button() -> void:
	if not claim_button or not progress_data:
		return

	if progress_data.claimed:
		claim_button.text = "å·²é¢†å–"
		claim_button.disabled = true
	elif progress_data.completed:
		claim_button.text = "é¢†å–å¥–åŠ±"
		claim_button.disabled = false
	else:
		claim_button.text = "æœªå®Œæˆ"
		claim_button.disabled = true


## é¢†å–å¥–åŠ±ç‚¹å‡»
func _on_claim_pressed() -> void:
	if not achievement_data or not DataManager:
		return

	DataManager.claim_achievement(achievement_data.id, func(success: bool, data: Dictionary)
		if success:
			print("[AchievementItem] æˆå°±å¥–åŠ±é¢†å–æˆåŠŸ: ", achievement_data.id)
			# åˆ·æ–°æŒ‰é’®çŠ¶æ€
			if progress_data:
				progress_data.claimed = true
			_update_claim_button()
			# æ˜¾ç¤ºå¥–åŠ±å¼¹çª—
			if data.has("rewards"):
				EventBus.show_rewards.emit(data["rewards"])
		else:
			push_error("[AchievementItem] æˆå°±å¥–åŠ±é¢†å–å¤±è´¥")
	)
)
